🐛 fix(index.css): increase right padding of .search-icon class to improve alignment with other elements

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -173,7 +173,7 @@ The cursor: default; property value restores the browser's default cursor style 
     @apply w-full overflow-auto scrollbar-hide
   }
   .search-icon {
-    @apply absolute inset-y-0 right-0 flex items-center py-1.5 pr-4
+    @apply absolute inset-y-0 right-0 flex items-center py-1.5 pr-5
   }
   .extra-side-bar-save-disable {
     @apply text-muted-foreground
